# imm

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml
imm/: __init__.py  feature_matcher.py  image_matching.py  misc.py  settings.py  ui.py
imm/base/: __init__.py  feature.py  matcher.py  model_base.py  transforms.py
imm/estimators/: __init__.py  estimator.py  homography.py  pnp.py
imm/extractors/: __init__.py  _helper.py  caps.py  d2net.py  disk.py  r2d2net.py  superpoint.py  xfeat.py
imm/extractors/modules/: blocks.py  caps_modules.py  d2net_modules.py  disk_modules.py  misc.py  r2d2net_modules.py  superpoints_modules.py  unet.py  utils.py
imm/matchers/: __init__.py  _helper.py  aspanformer.py  dkm.py  efficient_loftr.py  lighterglue.py  lightglue.py  loftr.py  matchformer.py  nn.py  superglue.py
imm/matchers/modules/: aspanformer_modules.py  dkm_modules.py  efficient_loftr_modules.py
imm/matchers/modules/matchformer/: __init__.py  coarse_matching.py  fine_matching.py  fine_preprocess.py  match_LA_large.py  match_LA_lite.py  match_SEA_large.py  match_SEA_lite.py  matchformer_modules.py
imm/registry/: __init__.py  factory.py  register.py
imm/tools/: __init__.py  extract.py  match.py
imm/utils/: device.py  hpatches.py  io.py  logger.py  metrics.py  viz2d.py  warnings.py
tests/: __init__.py  test_extractors.py  test_homographies.py  test_matchers.py  test_pnp.py
